<resources>
    <string name="app_name">TRU Eng. Planner</string>
    <string name="MainActivitytextView1">TRU</string>
    <string name="SplashScreentextView1">group1</string>
    <string name="MainActivitybtn1">Make a Plan</string>
    <string name="MainActivitybtn2">Quick View</string>
    <string name="title_activity_quick_view">QuickView</string>
    <string name="courseInfoTextView">Course Info</string>

    <string name="yearScreenTextView">What year of university are you in?</string>
    <string name="yearNextBtn">Next</string>
    <string name="yearRadioBtn">First Year</string>
    <string name="yearRadioBtn2">Second Year</string>
    <string name="yearRadioBtn3">Third Year</string>
    <string name="yearRadioBtn4">Fourth Year</string>
    <string name="yearRadioBtn5">Fifth Year</string>


    <string name="passFailNextBtn">Next</string>

    <string name="action_settings">Settings</string>
    <string name="coursename">CourseName</string>
    <string name="offering">Offering</string>
    <string name="prlist">PRList</string>
    <string name="tolist">ToList</string>
    <string name="title">Title</string>
    <string name="toListTitle">ToListTitle</string>

    <string name="title_activity_central">Custom Schedule</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="MainActivitybtn3">VIEW MY PLAN</string>

    <string name="customAddTextView">Select the course you want to add to </string>

</resources>
