<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#4863A0"
    android:padding="16dp">

    <EditText
        android:id="@+id/credential"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="Credential" />

</RelativeLayout>